<!--
  ~ Copyright (C) 2017 Citrus-CAF Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Margarita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Margarita</string>
    <string name="nav_header_summary">#TEAMCARDINAL</string>
    <string name="dashboard_card_title">Welcome to Margarita!</string>
    <string name="dashboard_card_summary">A substratum theme made with ❤ by</string>
    <string name="team_title">#TEAMCARDINAL</string>
    <string name="dashboard_info_title">Highlights</string>
    <string name="dashboard_info_summary"><b>• Frameworks</b>\n - Colorful Accents and unique Backgrounds\n - PowerMenu with custom icons.\n\n<b>• SystemUI</b>\n - Fully themed navbar with uniquely crafted icons.\n - Option to choose Notification title color.\n\n<b>• Settings</b>\n - Fully themed  with custom dashboard icons.\n - Option for translucent BG.</string>
    <string name="theme_package_name">com.citrus.theme</string>
    <string name="telegram_channel_link">https://t.me/tctheme</string>
    <string name="gplus_community_link">https://plus.google.com/communities/110928715574226998482</string>
    <string name="github_source_link">https://github.com/Citrus-CAF/packages_apps_Margarita</string>
    <string name="sublime_download_link">https://github.com/Citrus-CAF/packages_apps_Sublime/releases/download/v1.0/Sublime-v1.0.apk</string>
    <string name="fab_git_label">GitHub source</string>
    <string name="fab_gplus_label">G+ community</string>
    <string name="fab_tg_label">Telegram channel</string>
    <string name="fab_apply_label">Apply theme</string>
    <string name="substratum_not_installed_message">Substratum not installed!</string>
    <string name="install_message">INSTALL</string>
    <string name="substratum_playstore_link">https://play.google.com/store/apps/details?id=projekt.substratum</string>
    <string name="splash_screen_app_title">Margarita</string>
    <string name="dashboard_sublime_title">Sublime!</string>
    <string name="dashboard_sublime_summary">Sublime is an extension to Margarita which lets you change fonts and bootanimations</string>
    <string name="dashboard_sublime_download">DOWNLOAD</string>
    <string name="dashboard_sublime_open">OPEN</string>
    <string name="choose_sub_app">Choose a Substratum Application</string>
    <string name="sub_name">Substratum</string>
    <string name="sub_lite_name">Substratum Lite</string>
    <string name="substratum_playstore_link_2">https://play.google.com/store/search?q=substratum+theme+engine+or+substratum+lite+theme+engine&amp;c=apps</string>
</resources>
