<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Citrus-CAF Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bar_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_expanded"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_expanded"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/heroimage"
            app:layout_collapseMode="parallax" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include
        layout="@layout/content_dashboard"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_main"
        app:layout_behavior="com.citrus.theme.FloatingActionMenuBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="10dp"
        app:menu_colorNormal="@color/fab_main_background"
        app:menu_colorPressed="@color/fab_main_background"
        app:menu_icon="@drawable/ic_fab_main"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_git"
            app:fab_label="@string/fab_git_label"
            app:fab_colorNormal="@color/fab_git_background"
            app:fab_colorPressed="@color/fab_git_background"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_gplus"
            app:fab_label="@string/fab_gplus_label"
            app:fab_colorNormal="@color/fab_gplus_background"
            app:fab_colorPressed="@color/fab_gplus_background"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_telegram"
            app:fab_label="@string/fab_tg_label"
            app:fab_colorNormal="@color/fab_tg_background"
            app:fab_colorPressed="@color/fab_tg_background"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_apply"
            app:fab_label="@string/fab_apply_label"
            app:fab_colorNormal="@color/fab_apply_background"
            app:fab_colorPressed="@color/fab_apply_background"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
