<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Citrus-CAF Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dashboard_main_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/dashboard_main_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="@dimen/content_padding"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dashboard_card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin"
                        android:gravity="center"
                        android:text="@string/dashboard_card_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:id="@+id/dashboard_card_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dashboard_card_title"
                        android:layout_marginBottom="@dimen/content_margin"
                        android:gravity="center"
                        android:text="@string/dashboard_card_summary"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/text_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dashboard_info_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="@dimen/content_padding"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dashboard_info_card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin"
                        android:gravity="start"
                        android:text="@string/dashboard_info_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/text_title" />


                    <TextView
                        android:id="@+id/dashboard_info_card_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dashboard_info_card_title"
                        android:layout_marginBottom="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginStart="@dimen/content_margin"
                        android:gravity="start"
                        android:text="@string/dashboard_info_summary"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/text_content" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>